--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>positiv</groupId>
     <artifactId>sqlcmd</artifactId>
     <version>1.0</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
